fix: footer top spacing

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -53,6 +53,7 @@ footer {
   align-items: center;
   justify-content: center;
   gap: 50px;
+  padding-top: 40px;
 }
 
 footer a {
